--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,8 @@ dependencies {
     implementation 'com.firebaseui:firebase-ui-firestore:8.0.0'
 
     implementation 'com.github.dhaval2404:imagepicker-support:1.7.1'
+
+    implementation 'io.github.ShawnLin013:number-picker:2.4.13'
 }
 
 apply plugin: 'com.google.gms.google-services'
