--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ allprojects {
         google()
         mavenCentral()
         mavenLocal()
+//        maven { url "https://jitpack.io" }
     }
 }
 
