Image picker init

--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,7 @@ allprojects {
         google()
         mavenCentral()
         mavenLocal()
-//        maven { url "https://jitpack.io" }
+        maven { url "https://jitpack.io" }
     }
 }
 
