--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,7 @@ allprojects {
         mavenCentral()
         mavenLocal()
         maven { url "https://jitpack.io" }
+        maven { url 'https://maven.google.com' }
     }
 }
 
