--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,8 @@ allprojects {
         google()
         mavenCentral()
         mavenLocal()
+        maven { url "https://jitpack.io" }
+        maven { url 'https://maven.google.com' }
     }
 }
 
