--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,9 @@
         <activity
             android:name=".RecipeMainActivity"
             android:parentActivityName=".MainActivity" />
+        <activity
+            android:name=".NewRecipeActivity"
+            android:parentActivityName=".RecipeMainActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
