Feature/recipe activity (#4)
* Recipe view delete

* Recipe insert

* Recipe update

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,12 @@
         <activity
             android:name=".RentBuyActivity"
             android:parentActivityName=".RentMainActivity" />
+        <activity
+            android:name=".RecipeMainActivity"
+            android:parentActivityName=".MainActivity" />
+        <activity
+            android:name=".NewRecipeActivity"
+            android:parentActivityName=".RecipeMainActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
